# graphBPlus_parallel_opt

./: .gitignore  CMakeLists.txt  README.md  graphBplus_02.cpp  graphBplus_02.cu  graphBplus_02_serial.cpp  graphBplus_02_serial_loop-unfold-4.cpp  graphBplus_02_serial_loop-unfold.cpp  run_Serial_O0.sh  run_graphBplus_O0-unfold4.sh  run_graphBplus_O0.sh  run_graphBplus_O0_OMP.sh  run_graphBplus_O0_ser.sh  run_perf_graphBplus_O0-unfold4.sh  run_perf_graphBplus_O0.sh  run_perf_graphBplus_O0_OMP.sh  run_perf_graphBplus_serial.sh  run_perf_serial_O0.sh
build_Serial/: Serial_graphBplus
data/: amazonVideo_core5_edges2.csv  graph.csv
data/results/: graph.csv
test/: out.csv
